# bootz

./: go.mod
client/: BUILD.bazel
proto/: bootz.proto
proto/bootz/: bootz.pb.go
server/: BUILD.bazel  server.go
server/entitymanager/: entitymanager.go  entitymanager_test.go
server/service/: service.go
server/tests/sut/image/: BUILD.bazel  main.go
testing/: README.md
